# IELTS-mate

./: .gitignore  HANDOVER.md  LEARNING.md  cursor_ copy.md  electron-builder.yml  electron.vite.config.ts  electron.vite.web.config.ts  package.json  pnpm-lock.yaml  prd.md  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.renderer.config.ts
backend/: backend.spec  launch-backend.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: settings.py  speaking.py  vocabulary.py  writing.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  settings.py  speaking.py  vocabulary.py  writing.py
backend/app/schemas/: settings.py  speaking.py  vocabulary.py  writing.py
backend/app/services/: band_descriptors.py  settings_service.py  sm2.py  speaking_memory.py  speaking_prompts.py  speaking_service.py  speaking_state_machine.py  topic_bank_service.py  topic_gen_service.py  vocabulary_service.py  writing_report_parser.py  writing_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  openai_compatible.py
backend/app/services/stt/: __init__.py  base.py  openai_whisper.py
backend/app/services/tts/: __init__.py  base.py  openai_tts.py
backend/scripts/: extract_ielts_vocab.py  generate_topics.py  validate_mermaid.mjs
backend/tests/: smoke_step2.py  test_sm2.py
designs/: README.md
docs/: PLAN-writing-topic-system.md  api-spec.md  architecture.md  development-guide.md  frontend-design-new.md  frontend-pages.md
(+73 files in other folders)
