[project]
name = "ielts-mate-backend"
version = "0.1.0"
description = "FastAPI backend for IELTS-mate desktop app"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "aiosqlite",
  "pydantic",
  "httpx",
  "openai",
  "python-dotenv",
  "orjson",
  "websockets",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
